add home index with img, began working on dancing font

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,23 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container logo">
+    <h1>
+        <span data-rotation="-2" data-translate-x="-4" data-translate-y="-2" style="transform: rotate(-2deg) translateX(-4%) translateY(-2%) translateZ(0px);">S</span>
+        <span data-rotation="10" data-translate-x="11" data-translate-y="10" style="transform: rotate(10deg) translateX(11%) translateY(10%) translateZ(0px);">E</span>
+        <span data-rotation="-19" data-translate-x="13" data-translate-y="-1" style="transform: rotate(-19deg) translateX(13%) translateY(-1%) translateZ(0px);">T</span>
+        <span data-rotation="15" data-translate-x="-7" data-translate-y="-12" style="transform: rotate(15deg) translateX(-7%) translateY(-12%) translateZ(0px);">H</span>
+        <br>
+        <span data-rotation="8" data-translate-x="14" data-translate-y="-8" style="transform: rotate(8deg) translateX(14%) translateY(-8%) translateZ(0px);">M</span>
+        <span data-rotation="2" data-translate-x="3" data-translate-y="-12" style="transform: rotate(2deg) translateX(3%) translateY(-12%) translateZ(0px);">E</span>
+        <span data-rotation="3" data-translate-x="3" data-translate-y="-4" style="transform: rotate(3deg) translateX(3%) translateY(-4%) translateZ(0px);">D</span>
+        <span data-rotation="23" data-translate-x="-5" data-translate-y="9" style="transform: rotate(23deg) translateX(-5%) translateY(9%) translateZ(0px);">E</span>
+        <span data-rotation="-8" data-translate-x="14" data-translate-y="8" style="transform: rotate(-8deg) translateX(14%) translateY(8%) translateZ(0px);">I</span>
+        <span data-rotation="-6" data-translate-x="4" data-translate-y="14" style="transform: rotate(-6deg) translateX(4%) translateY(14%) translateZ(0px);">R</span>
+        <span data-rotation="-7" data-translate-x="-14" data-translate-y="-9" style="transform: rotate(-7deg) translateX(-14%) translateY(-9%) translateZ(0px);">O</span>
+        <span data-rotation="12" data-translate-x="5" data-translate-y="-5" style="transform: rotate(12deg) translateX(5%) translateY(-5%) translateZ(0px);">S</span>
+    </h1>
+</div>
+
+<div class="container">
+    <img class="sethDevil" alt="Picture of Seth Medeiros" src="../css/devil.jpeg">
 </div>
